Deployment test: -> Added scripts to help the docker-compose run, the docker-compose now runs the scripts and then runs a migrations docker image that will update the database to match any chnages since the scripts were created. -> Updated the docker-compose with an initialization folder that runs scripts the first time the postgres db is created.
Project-Tech-Shop:
-> Added Launch settings for a tesdting startup option
-> Fixed issue with the Crazy Page where the simpleGame was broken from the AJAX request for basket at the top of the image.
-> chnaged logs created from running to be named Dev if run from Dev environment
-> Added appsettings for Test environment
-> Updated dockerfile to remove not needed service
-> Updated Startup for specific Test environment config

Project.Tech.Shop.Services.Contact:
-> Added Contact Service for customer service tools
Note: Service is still empty for the time being.

Project.Tech.Shop.Services.Migrations.Startup:
-> Added dockerfile
-> Added Appsettings for the dev and normal environment
-> Added Environemtn variable to the launchsettings.json to set environment to development, other it is production
-> changed program.cs to allow automatic updating of all the databases rather then having the manually do it.

Project.Tech.Shop.Web.Test.Playwright:
-> Added playwright Tests with GlobalSetup class to sort out the work to set up the running of the project to start testing playwright.
-> Added pages for Login and registration Page
-> Added Login, mainPage and Registration Tests
-> All test work off the PlaywrightTestBase, this adds the ability to keep naming conventions for tests, create screnshots, add tags, and finally create a report containing all the information.
-> Added ReportManager.cs Class to handle the report creation

Project.Tech.Shop.Services.Products:
-> Made general changes to the Products db entities to work better with the app, this includes adding basket details.

Project.Tech.Shop.Services.Transactions:
-> Delete

--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Crazy/SimpleGame.cshtml
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Crazy/SimpleGame.cshtml
@@ -21,6 +21,8 @@
             height: 50px;
             position: absolute;
             background-color: red;
+            top: 0; /* Initial top position */
+            left: 0; /* Initial left position */
         }
 
         .point {
@@ -36,37 +38,59 @@
     <div id="slide-26">
         <h2>Slide 26 - Simple Game</h2>
         <div id="container">
-            <div id="animate" style="top: 0; left: 0;"></div>
+            <div id="animate"></div>
             <div id="points"></div>
         </div>
     </div>
+
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
+        document.addEventListener("DOMContentLoaded", function () {
             var animate = document.getElementById("animate");
             var container = document.getElementById("container");
             var pointsContainer = document.getElementById("points");
             var score = 0;
 
-            // Function to generate a random point
             function generateRandomPoint() {
                 var point = document.createElement("div");
                 point.className = "point";
-                point.style.left = Math.floor(600 * Math.random()) + "px";
-                point.style.top = Math.floor(600 * Math.random()) + "px";
+                point.style.left = Math.floor(Math.random() * (container.clientWidth - 10)) + "px";
+                point.style.top = Math.floor(Math.random() * (container.clientHeight - 10)) + "px";
                 pointsContainer.appendChild(point);
             }
 
-            // Function to check collision between animate and points
-            function checkCollision() {
+            for (var i = 0; i < 5; i++) {
+                generateRandomPoint();
+            }
+
+            document.addEventListener("keydown", function (e) {
+                var top = parseInt(animate.style.top, 10) || 0;
+                var left = parseInt(animate.style.left, 10) || 0;
+                var step = 10;
+
+                switch (e.keyCode) {
+                    case 37: // Left
+                        left = Math.max(0, left - step);
+                        break;
+                    case 38: // Up
+                        top = Math.max(0, top - step);
+                        break;
+                    case 39: // Right
+                        left = Math.min(container.clientWidth - animate.offsetWidth, left + step);
+                        break;
+                    case 40: // Down
+                        top = Math.min(container.clientHeight - animate.offsetHeight, top + step);
+                        break;
+                }
+
+                animate.style.top = top + "px";
+                animate.style.left = left + "px";
+
                 var animateRect = animate.getBoundingClientRect();
                 var points = document.getElementsByClassName("point");
-                for (var i = 0; i < points.length; i++) {
+                for (var i = points.length - 1; i >= 0; i--) {
                     var pointRect = points[i].getBoundingClientRect();
-                    if (animateRect.left < pointRect.right &&
-                        animateRect.right > pointRect.left &&
-                        animateRect.top < pointRect.bottom &&
-                        animateRect.bottom > pointRect.top) {
-                        // Collision detected
+                    if (animateRect.left < pointRect.right && animateRect.right > pointRect.left &&
+                        animateRect.top < pointRect.bottom && animateRect.bottom > pointRect.top) {
                         score++;
                         animate.style.width = (50 + score * 10) + "px";
                         animate.style.height = (50 + score * 10) + "px";
@@ -74,35 +98,9 @@
                         generateRandomPoint();
                     }
                 }
-            }
-
-            // Generate initial random points
-            for (var i = 0; i < 5; i++) {
-                generateRandomPoint();
-            }
-
-            // Event listener for keyboard input
-            document.addEventListener("keydown", function(e) {
-                var top = parseInt(animate.style.top) || 0;
-                var left = parseInt(animate.style.left) || 0;
-                var step = 10;
-
-                if (e.keyCode == 37 && left >= step) { // Left arrow
-                    left -= step;
-                } else if (e.keyCode == 38 && top >= step) { // Up arrow
-                    top -= step;
-                } else if (e.keyCode == 39 && left + animate.offsetWidth + step <= container.offsetWidth) { // Right arrow
-                    left += step;
-                } else if (e.keyCode == 40 && top + animate.offsetHeight + step <= container.offsetHeight) { // Down arrow
-                    top += step;
-                }
-
-                animate.style.top = top + "px";
-                animate.style.left = left + "px";
-
-                checkCollision();
             });
         });
     </script>
 </body>
 </html>
+
