--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Shared/_Layout.cshtml
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Shared/_Layout.cshtml
@@ -65,7 +65,7 @@
                                 </a>
                             </li>
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle text-light" href="#" id="navbarAccountDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     @User.Identity.Name!
                                 </a>
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
