--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Home/Index.cshtml
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Home/Index.cshtml
@@ -1,8 +1,29 @@
-﻿@{
+﻿@model HomeViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4" id="welcome-message">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="container mt-12">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">News</h5>
+                    <p class="card-text">@Model.News</p>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-6">
+            <img class="card-img-top" src="data:image/jpeg;base64,@Model.RandomProduct.Image" alt="Random Product Image">
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h5 class="card-title">@Model.RandomProduct.Name</h5>
+                    <p class="card-text">@Model.RandomProduct.Description</p>
+                    <p class="card-text">$@Model.RandomProduct.Price</p>
+                    <a href="@Url.Action("Detail", "Products", new { id = Model.RandomProduct.ProductId })" class="btn btn-primary">View Product</a>
+                    <a href="@Url.Action("Index", "Products")" class="btn btn-secondary">View All Products</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
