--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Admin/Products.cshtml
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Admin/Products.cshtml
@@ -3,6 +3,9 @@
     ViewData["Title"] = "Admin Products Page";
 }
 
+<partial name="Partials/_ConfirmationMessageDisplay" />
+<partial name="Partials/_PageErrors" />
+
 <h2>Products</h2>
 <a class="btn btn-primary" asp-action="AddProduct">Add New Product</a>
 <table class="table">
