--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Admin/EditProduct.cshtml
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Admin/EditProduct.cshtml
@@ -6,6 +6,9 @@
 
 <h2>Edit Product</h2>
 
+<partial name="Partials/_ConfirmationMessageDisplay" />
+<partial name="Partials/_PageErrors" />
+
 <form asp-action="EditProduct" method="post">
     <input type="hidden" asp-for="ProductId" />
     <div class="form-group">
