--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Admin/Users.cshtml
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Admin/Users.cshtml
@@ -1,7 +1,46 @@
-﻿@{
-    ViewData["Title"] = "Admin Users Page";
+﻿@model IEnumerable<Project.Tech.Shop.Web.Models.UserProfileViewModel>
+
+@{
+    ViewData["Title"] = "Users";
 }
 
-<div >
-    
-</div>
+<partial name="Partials/_ConfirmationMessageDisplay" />
+<partial name="Partials/_PageErrors" />
+
+<h1>Users</h1>
+
+<p>
+    <a href="@Url.Action("AddUser", "Admin")" class="btn btn-primary">Add New User</a>
+</p>
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Username</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Role</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var user in Model)
+        {
+            <tr>
+                <td>@user.Username</td>
+                <td>@user.FirstName</td>
+                <td>@user.LastName</td>
+                <td>@user.Email</td>
+                <td>@user.Role</td>
+                <td>
+                    <a href="@Url.Action("EditUser", "Admin", new { id = user.UserId })" class="btn btn-warning">Edit</a>
+                    <form action="@Url.Action("DeleteUser", "Admin", new { id = user.UserId })" method="post" style="display:inline;">
+                        @Html.AntiForgeryToken()
+                        <input type="submit" value="Delete" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete this user?');" />
+                    </form>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
