--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Shared/_Layout.cshtml
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Shared/_Layout.cshtml
@@ -39,11 +39,11 @@
                                 </div>
                             </li>
                         </li>
-                        <li class="nav-item">
+                        @* <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Products" asp-action="Privacy">Deals</a>
-                        </li>
+                        </li> *@
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Support</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
                             <li class="nav-item dropdown">
@@ -88,6 +88,7 @@
                                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                     <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="Profile">Profile</a>
                                     <a class="dropdown-item" asp-area="" asp-controller="basket" asp-action="viewBasket">Basket</a>
+                                    <a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="ChangePassword">Change Password</a>
                                     <form asp-controller="Account" asp-action="Logout" method="post">
                                         <button type="submit" class="dropdown-item">Logout</button>
                                     </form>
