--- a/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Account/Profile.cshtml
+++ b/application_code/src/Host Applications/Project.Tech.Shop.Web/Views/Account/Profile.cshtml
@@ -6,6 +6,9 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<partial name="Partials/_ConfirmationMessageDisplay" />
+<partial name="Partials/_PageErrors" />
+
 <form asp-action="Profile" method="post" id="profileForm">
     <input type="hidden" asp-for="UserId" />
     <input type="hidden" asp-for="Username" />
